--- a/School_Mgmt_342/Views/Student/GetStudents.cshtml
+++ b/School_Mgmt_342/Views/Student/GetStudents.cshtml
@@ -28,6 +28,9 @@
                 @Html.DisplayNameFor(model => model.Gender)
             </th>
             <th>
+                @Html.DisplayNameFor(model=> model.Teacher)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.CountryName)
             </th>
             <th>
@@ -62,6 +65,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Gender)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem=> item.Teacher)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CountryName)
